# dji-debug

./: README.md
src/altimeter/: CMakeLists.txt
src/altimeter/include/: config.h  sample.h  util.h
src/altimeter/scripts/: build-appimage-debug.sh  build-appimage-desktop.sh  build-appimage-ubuntu22.04.sh  build-arm.sh  build-arm64-debug.sh  build-arm64.sh  download-libs.sh  mkappimage.sh  mkdeb.sh  mksdk.sh  mkzip.sh
src/altimeter/scripts/qbs-build/: get-cachedlibrary.sh
src/altimeter/src/: app.cpp  autopilot_errors.cpp  config.cpp  hal.cpp  sample.cpp
src/altimeter/src/hal/: osal.c
src/camera/: CMakeLists.txt
src/camera/include/: config.h  hal.h  sample.h
src/camera/include/hal/: hal_log.h  osal_fs.h
src/camera/src/: app.cpp  config.cpp  sample.cpp  utils.cpp
src/camera/src/hal/: osal_fs.c
src/m400/: CMakeLists.txt  app.json
src/m400/include/: autopilot_errors.h  config.h  hal.h  m400.h  sample.h
src/m400/include/hal/: hal_network.h  hal_uart.h  osal.h
src/m400/src/: app.cpp  autopilot_errors.cpp  config.cpp  hal.cpp  m400.cpp  sample.cpp
src/m400/src/hal/: hal_log.c  hal_network.c  hal_uart.c  hal_usb_bulk.c  osal_fs.c  osal_socket.c
src/ping-pong/: CMakeLists.txt
src/ping-pong/include/: config.h  ping-pong.h  sample.h  syncqueue.h
src/ping-pong/include/hal/: hal_uart.h
src/ping-pong/src/: app.cpp  config.cpp  sample.cpp
src/ping-pong/src/hal/: hal_uart.c
